[package]
name = "marika-finger-blaster"
version = "0.0.2"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.27", features = ["derive"] }
crossterm = "0.28.1"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.43.1", features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }
