[package]
name = "marika-finger-blaster"
version = "0.0.4"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
